UI: Fix left alignment of logo.

--- a/hawk/app/assets/stylesheets/application/_head.scss
+++ b/hawk/app/assets/stylesheets/application/_head.scss
@@ -10,6 +10,9 @@
 
   .navbar-header {
     float: left;
+    .navbar-brand {
+      padding: 15px 15px 15px 20px;
+    }
   }
 
   .navbar-nav {
@@ -20,8 +23,8 @@
       float: left;
 
       a {
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 15px;
+        padding-bottom: 15px;
       }
     }
   }
